RESOLVED FIXED69748
JSVALUE32_64 DFG JIT - bug fix for V8 benchmark cases "crypto" and "raytrace"
https://bugs.webkit.org/show_bug.cgi?id=69748
Summary JSVALUE32_64 DFG JIT - bug fix for V8 benchmark cases "crypto" and "raytrace"
Yuqiang Xian
Reported 2011-10-10 02:42:06 PDT
Together with patch in bug #69743, we're able to run 5 out of 7 v8 benchmark cases with 32-bit DFG. Still deltablue crashes and early-boyer produces wrong results. Current result on Linux IA32 is - w/o DFG - Richards: 3816 Crypto: 4332 RayTrace: 6560 RegExp: 1901 Splay: 4425 ---- Score (version 6): 3908 w/ DFG - Richards: 4815 Crypto: 10021 RayTrace: 6761 RegExp: 1887 Splay: 4518 ---- Score (version 6): 4885
Attachments
the patch (2.15 KB, patch)
2011-10-10 02:45 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-10-10 02:45:33 PDT
Created attachment 110343 [details] the patch
WebKit Review Bot
Comment 2 2011-10-10 12:53:13 PDT
Comment on attachment 110343 [details] the patch Clearing flags on attachment: 110343 Committed r97078: <http://trac.webkit.org/changeset/97078>
WebKit Review Bot
Comment 3 2011-10-10 12:53:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.