JSVALUE32_64 DFG JIT - bug fix for V8 benchmark cases "crypto" and "raytrace" https://bugs.webkit.org/show_bug.cgi?id=69748

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-10
Reviewed by Filip Pizlo.

* dfg/DFGJITCodeGenerator32_64.cpp:
(JSC::DFG::JITCodeGenerator::cachedGetMethod):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compileObjectEquality):

Canonical link: https://commits.webkit.org/85820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97078 268f45cc-cd09-0410-ab3c-d52691b4dbfc